# 2d_trajectory_generation

./: README.md
2d_trajectory_generation/: CMakeLists.txt  package.xml
2d_trajectory_generation/cmake/: FindGUROBI.cmake
2d_trajectory_generation/include/trajectory_generation/: RayGeneration.h  TrajectoryGenerationOptimalControl.h
2d_trajectory_generation/include/trajectory_generation/ss/: PolynomialTrajectoryGeneration.h
2d_trajectory_generation/launch/: jackal_navigation.launch  obstaclefree_navigation.launch
2d_trajectory_generation/script/: controller_simulation.py  controller_simulation_R2.py  controller_simulation_R3.py  controller_simulation_R4.py  ensamble_test.py  new_trajectory_logic.py  trajectory_generation_test.py
2d_trajectory_generation/src/: RayGeneration.cpp  TrajectoryGenerationOptimalControl.cpp  controller_node_old_working.cpp  trajectory_generation_node.cpp
2d_trajectory_generation/src/ss/: PolynomialTrajectoryGeneration.cpp  controller_node_R1.cpp  controller_node_R2.cpp  controller_node_R4.cpp  sample_gurobi.cpp  trajectory_generation_node_OC.cpp  trajectory_generation_node_R1.cpp  trajectory_generation_node_costmap.cpp  trajectory_generation_noros.cpp
